--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,3 @@
-
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -12,18 +10,115 @@ body {
   overflow-x: hidden;
 }
 
-
 a {
   color: inherit;
   text-decoration: none;
 }
 
 .logo {
-    fill: #fff;
+  fill: #fff;
 }
 
 .r-w-\[5\.875\] {
-    width: clamp(5.29rem, 6.53vw, 7.34rem);
+  width: clamp(5.29rem, 6.53vw, 7.34rem);
 }
 
+.swipperwrappercomponent {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex !important;
+  transition-property: transform;
+  transition-timing-function: var(
+    --swiper-wrapper-transition-timing-function,
+    ease
+  );
+  transition-timing-function: var(
+    --swiper-wrapper-transition-timing-function,
+    initial
+  );
+  box-sizing: content-box;
+}
 
+.swipperwrappercomponent:first-child {
+  flex: 1 1 0%;
+  margin-right: 20px;
+}
+
+.swipperwrappercomponent:last-child {
+  margin-right: 0 !important;
+}
+
+.swipperwrappercomponent > div {
+  width: auto !important;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  height: 100%;
+  position: relative;
+  transition-property: transform;
+  display: block;
+}
+
+.info .swiper-slide {
+  width: auto !important;
+}
+
+.info .swiper-wrapper .swiper-slide:first-child {
+  flex: 1 1 0%;
+}
+
+.info .swiper-wrapper .swiper-slide:last-child {
+  margin-right: 0 !important;
+}
+
+.link1,
+.link2,
+.link3 {
+  display: inline-block;
+}
+
+@media (min-width: 1024px) {
+  .link1 {
+    width: 29vw;
+  }
+}
+
+@media (min-width: 640px) {
+  .link1 {
+    width: 48vw;
+  }
+}
+.link1 {
+  width: 29vw;
+}
+
+@media (min-width: 1024px) {
+  .link2 {
+    width: 36vw;
+  }
+}
+
+@media (min-width: 640px) {
+  .link2 {
+    width: 59.4vw;
+  }
+}
+.link2 {
+  width: 36vw;
+}
+
+@media (min-width: 1024px) {
+  .link3 {
+    width: 21vw;
+  }
+}
+
+@media (min-width: 640px) {
+  .link3 {
+    width: 34.65vw;
+  }
+}
+.link3 {
+  width: 21vw;
+}
